--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+click==8.1.3
+dash==2.15.0
+dash_bootstrap_components==1.5.0
+numpy==1.21.5
+pandas==1.2.3
+plotly==5.13.0
+python-dotenv==1.0.1
+setuptools==59.8.0
